--- a/apps/sample-app/docker-compose.prod.yml
+++ b/apps/sample-app/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   sample-app:
+    container_name: sample-app-green
     image: sample-app:latest
     restart: unless-stopped
     ports:
@@ -33,6 +34,7 @@ services:
 
   # Scheduled tasks runner
   cron-tasks:
+    container_name: sample-app-cron-green
     image: sample-app:latest
     restart: unless-stopped
     command: ["node", "cron/scheduler.js"]
