Add HTTP-only mode support and enhance documentation
- Introduced `--http-only` flag in `configure-apps.sh` to generate ingress without HTTPS redirect, useful for Let's Encrypt rate limit situations.
- Added `toggle-https-redirect.sh` script to enable/disable HTTPS redirect for all applications.
- Updated `CLAUDE.md` with new guidelines for handling Let's Encrypt rate limits and added notes on escaping dollar signs in strings.
- Refactored Dockerfile for sample app to specify paths for package files and application files.

These changes improve deployment flexibility and enhance documentation clarity.

--- a/apps/sample-6/Dockerfile
+++ b/apps/sample-6/Dockerfile
@@ -4,14 +4,14 @@ FROM node:18-alpine
 # Set working directory
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+# Copy package files from the app directory
+COPY apps/sample-6/package*.json ./
 
 # Install dependencies
 RUN npm install --only=production
 
-# Copy application files
-COPY . .
+# Copy application files from the app directory
+COPY apps/sample-6/ .
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs
