Enhance Gamani application setup and monitoring capabilities
- Added a new full-stack application named "Gamani" with a backend built on Node.js and Express, and a frontend using React and Vite.
- Introduced Dockerfile for multi-stage builds, optimizing the production image for the Gamani application.
- Implemented Kubernetes deployment configurations, including deployment, service, and ingress resources for the Gamani app.
- Integrated monitoring stack (Prometheus, Grafana, Loki) with setup scripts for easy installation and dashboard management.
- Updated documentation to reflect the new application structure, technology stack, and deployment processes.

These changes improve the overall architecture, deployment efficiency, and monitoring capabilities of the application.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,11 @@ jspm_packages/
 .nx/cache
 .nx/workspace-data
 
+# Build outputs
+dist/
+apps/*/dist/
+apps/*/client/dist/
+
 
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md*.tar.gz
