--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "nx run-many --target=build",
     "serve": "nx serve",
-    "test": "nx run-many --target=test"
+    "test": "nx run-many --target=test",
+    "dev:gamani": "cd apps/gamani && npm run dev"
   },
   "devDependencies": {
     "@nx/js": "21.3.8",
