Refactor and enhance application management scripts and documentation
- Removed the `sample-6` application from the project, including its Dockerfile, environment configurations, and Kubernetes resources.
- Added new scripts for managing application deletion and ECR repository cleanup, including `delete-app.sh` and `delete-app-ecr.sh`.
- Updated `CLAUDE.md` to reflect changes in application management and added new commands for deleting individual apps and ECR repositories.
- Enhanced the Gamani application with improved logging and error handling in authentication and health check processes.
- Introduced a new setup script for configuring Firebase service account secrets in AWS Secrets Manager.

These changes streamline application management and improve the overall architecture of the project.

--- a/apps/gamani/Dockerfile
+++ b/apps/gamani/Dockerfile
@@ -12,8 +12,11 @@ COPY . .
 # Install all dependencies
 RUN npm ci
 
-# Build the workspace (backend TypeScript and frontend)
-RUN npm run build
+# Build the workspace dependencies (but skip gamani)
+RUN npx nx run-many --target=build --projects=server-core
+
+# Build gamani specifically using the compiled libs
+RUN cd apps/gamani && npx tsc --skipLibCheck
 
 # Build the frontend client
 WORKDIR /workspace/apps/gamani/client
