Refactor Dockerfile and enhance LoginPage logging
- Updated the Dockerfile for the Gamani application to change the working directory and ensure the latest build is used for the backend.
- Enhanced the LoginPage component by adding detailed logging for Google sign-in and error handling, improving debugging capabilities.
- Updated the displayed title on the LoginPage to reflect the new version of the application.
- Commented out the session clear functionality for debugging purposes.

These changes improve the build process and enhance user authentication experience.

--- a/apps/gamani/Dockerfile
+++ b/apps/gamani/Dockerfile
@@ -16,7 +16,8 @@ RUN npm ci
 RUN npx nx run-many --target=build --projects=server-core
 
 # Build gamani specifically using the compiled libs
-RUN cd apps/gamani && npx tsc --skipLibCheck
+WORKDIR /workspace/apps/gamani
+RUN rm -rf dist && npx tsc --skipLibCheck
 
 # Build the frontend client
 WORKDIR /workspace/apps/gamani/client
@@ -40,7 +41,7 @@ COPY --chown=nodeuser:nodejs apps/gamani/src ./src
 COPY --chown=nodeuser:nodejs apps/gamani/package.json ./
 COPY --chown=nodeuser:nodejs apps/gamani/tsconfig.json ./
 
-# Copy built backend from workspace
+# Copy built backend from workspace (ensure latest build)
 COPY --from=builder --chown=nodeuser:nodejs /workspace/apps/gamani/dist ./dist
 
 # Copy dependencies from workspace but exclude @bf-backend symlinks
@@ -67,4 +68,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 USER nodeuser
 
 # Start the application
-CMD ["node", "dist/server.js"]
+CMD ["node", "dist/apps/gamani/src/server.js"]
