--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -14,28 +14,36 @@
     "watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nodejs", "express", "typescript", "firebase", "dynamodb", "react", "ai"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "typescript",
+    "firebase",
+    "dynamodb",
+    "react",
+    "ai"
+  ],
   "author": "Vadim Zak",
   "license": "ISC",
   "dependencies": {
     "@bf-backend/server-core": "file:../../libs/server-core",
-    "express": "^4.18.2",
-    "firebase-admin": "^12.0.0",
-    "aws-sdk": "^2.1400.0",
     "@google/generative-ai": "^0.17.1",
-    "dotenv": "^16.0.3",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "uuid": "^9.0.0",
-    "typescript": "~5.8.2",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "18.16.9",
     "@types/uuid": "^9.0.8",
-    "@types/node": "18.16.9"
+    "aws-sdk": "^2.1400.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "firebase-admin": "^13.4.0",
+    "helmet": "^7.0.0",
+    "typescript": "~5.8.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.2",
-    "concurrently": "^8.2.2"
+    "ts-node": "^10.9.2"
   }
 }
