--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -18,7 +18,7 @@
     "nodejs",
     "express",
     "typescript",
-    "firebase",
+    "cognito",
     "dynamodb",
     "react",
     "ai"
@@ -32,11 +32,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "18.16.9",
     "@types/uuid": "^9.0.8",
+    "aws-jwt-verify": "^5.1.0",
     "aws-sdk": "^2.1400.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^13.4.0",
     "helmet": "^7.0.0",
     "typescript": "~5.8.2",
     "uuid": "^9.0.0"
