Enhance Gamani development workflow and IAM setup
- Introduced a new development script (`dev-with-creds.sh`) for local development, automating AWS credential setup with minimal permissions.
- Updated `CLAUDE.md` to include detailed instructions for first-time setup, daily development, and troubleshooting IAM issues.
- Added environment variable configurations in `.env.example` for AWS and DynamoDB.
- Enhanced deployment scripts to support automatic IAM role setup and validation.
- Created a new `ProjectManager` component for managing projects within the application, integrating MobX for state management.
- Implemented i18n support for Hebrew and English, including translation files and RTL layout adjustments.

These changes improve the development experience and security for the Gamani application.

--- a/apps/gamani/.env.example
+++ b/apps/gamani/.env.example
@@ -1,8 +1,36 @@
-# Backend Environment Variables
+# Gamani App Environment Variables
+
+# Node.js Environment
 NODE_ENV=development
 PORT=3002
+
+# AWS Configuration
 AWS_REGION=il-central-1
+AWS_DEFAULT_REGION=il-central-1
+
+# AWS Credentials (Required)
+# IMPORTANT: Do NOT set these manually. Instead use one of these methods:
+#
+# Method 1 (Recommended): Use the development script
+#   ./dev-with-creds.sh
+#
+# Method 2: Set credentials in your current shell session
+#   eval "$(./aws/iam/local-dev-setup.sh eval)"
+#   npm run dev
+#
+# These credentials provide minimal permissions for the gamani app only
+AWS_ACCESS_KEY_ID=<set_automatically_by_scripts>
+AWS_SECRET_ACCESS_KEY=<set_automatically_by_scripts>
+AWS_SESSION_TOKEN=<set_automatically_by_scripts>
+
+# DynamoDB Configuration
 DYNAMODB_TABLE_NAME=gamani-items
 
-# Google AI API Key
+# Google AI Configuration
 GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+
+# AWS SDK Configuration
+AWS_SDK_LOAD_CONFIG=1
+AWS_EC2_METADATA_DISABLED=false
+AWS_METADATA_SERVICE_TIMEOUT=10
+AWS_METADATA_SERVICE_NUM_ATTEMPTS=3
