--- a/apps/gamani/k8s/kustomization.yaml
+++ b/apps/gamani/k8s/kustomization.yaml
@@ -6,8 +6,9 @@ resources:
 - service.yaml
 - ingress.yaml
 
-commonLabels:
-  app: gamani
-  version: v1.0.0
+labels:
+- pairs:
+    app: gamani
+  includeSelectors: false
 
 namespace: apps
