--- a/apps/gamani/client/package.json
+++ b/apps/gamani/client/package.json
@@ -16,11 +16,13 @@
     "aws-amplify": "^6.15.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "i18next": "^25.3.2",
     "lucide-react": "^0.294.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.0.0"
   },
