--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "nx run-many --target=build",
     "serve": "nx serve",
     "test": "nx run-many --target=test",
-    "dev:gamani": "cd apps/gamani && npm run dev"
+    "dev:gamani": "cd apps/gamani && ./dev-with-creds.sh"
   },
   "devDependencies": {
     "@nx/js": "21.3.8",
