Implement chat history feature in Gamani application
- Added a new ChatStore for managing chat messages, including fetching, saving, and clearing messages.
- Integrated chat history functionality into the DashboardPage, allowing users to view and manage chat history.
- Updated API endpoints for chat history: `GET`, `POST`, and `DELETE` for managing messages associated with projects.
- Enhanced UI to toggle chat history visibility and clear chat history with user confirmation.
- Updated localization files to include chat history strings in English and Hebrew.

These changes improve user experience by providing persistent chat history for projects, enhancing the overall functionality of the Gamani application.

--- a/apps/gamani/k8s/deployment.yaml
+++ b/apps/gamani/k8s/deployment.yaml
@@ -41,6 +41,14 @@ spec:
           value: "3"
         - name: DYNAMODB_TABLE_NAME
           value: "gamani-items"
+        - name: DYNAMODB_PROJECTS_TABLE
+          value: "gamani-projects"
+        - name: DYNAMODB_MESSAGES_TABLE
+          value: "gamani-messages"
+        - name: AWS_ROLE_ARN
+          value: "arn:aws:iam::363397505860:role/gamani-app-role"
+        - name: AWS_WEB_IDENTITY_TOKEN_FILE
+          value: "/var/run/secrets/kubernetes.io/serviceaccount/token"
         livenessProbe:
           httpGet:
             path: /health
