--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -27,7 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "@bf-backend/server-core": "file:../../libs/server-core",
-    "@google/generative-ai": "^0.17.1",
+    "@google/genai": "^1.12.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "18.16.9",
