Implement game sharing functionality in Gamani application
- Added API endpoints for sharing games: `POST /api/protected/games/share` to create shareable games and `GET /api/games/:shareId` for public access.
- Implemented frontend features including a share button in the DashboardPage and a new SharedGamePage for viewing shared games.
- Enhanced localization for sharing UI in English and Hebrew.
- Updated the database schema to support shared games and added functionality to increment access counts.
- Improved error handling and user feedback for sharing operations.

These changes enhance user engagement by allowing users to share their games easily, improving the overall functionality of the Gamani application.

--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -26,6 +26,9 @@
   "author": "Vadim Zak",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.857.0",
+    "@aws-sdk/client-secrets-manager": "^3.857.0",
+    "@aws-sdk/lib-dynamodb": "^3.857.0",
     "@bf-backend/server-core": "file:../../libs/server-core",
     "@google/genai": "^1.12.0",
     "@types/cors": "^2.8.17",
@@ -33,7 +36,6 @@
     "@types/node": "18.16.9",
     "@types/uuid": "^9.0.8",
     "aws-jwt-verify": "^5.1.0",
-    "aws-sdk": "^2.1400.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
