--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -31,21 +31,21 @@
     "@aws-sdk/lib-dynamodb": "^3.857.0",
     "@bf-backend/server-core": "file:../../libs/server-core",
     "@google/genai": "^1.12.0",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.19.67",
     "@types/uuid": "^9.0.8",
     "aws-jwt-verify": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "typescript": "~5.8.2",
-    "uuid": "^9.0.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "helmet": "^7.2.0",
+    "typescript": "~5.8.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^2.0.22",
+    "concurrently": "^9.2.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   }
 }
