--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "dev:gamani": "cd apps/gamani && ./dev-with-creds.sh"
   },
   "devDependencies": {
-    "@nx/js": "21.3.8",
-    "@nx/node": "^21.3.8",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/node": "18.16.9",
-    "prettier": "^2.6.2",
-    "tslib": "^2.3.0",
-    "typescript": "~5.8.2"
+    "@nx/js": "21.3.10",
+    "@nx/node": "^21.3.10",
+    "@swc-node/register": "~1.10.10",
+    "@swc/core": "~1.13.3",
+    "@swc/helpers": "~0.5.17",
+    "@types/node": "^18.19.67",
+    "prettier": "^3.6.2",
+    "tslib": "^2.8.1",
+    "typescript": "~5.8.3"
   },
   "dependencies": {}
 }
