--- a/apps/gamani/k8s/service.yaml
+++ b/apps/gamani/k8s/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gamani-service
+  name: gamani
   namespace: apps
   labels:
     app: gamani
 spec:
-  type: ClusterIP
+  selector:
+    app: gamani
   ports:
   - port: 80
     targetPort: 3002
     protocol: TCP
     name: http
-  selector:
-    app: gamani
+  type: ClusterIP
