--- a/apps/gamani/k8s/kustomization.yaml
+++ b/apps/gamani/k8s/kustomization.yaml
@@ -1,14 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-- deployment.yaml
-- service.yaml
-- ingress.yaml
-
-labels:
-- pairs:
-    app: gamani
-  includeSelectors: false
-
 namespace: apps
+
+resources:
+  - deployment.yaml
+  - service.yaml
+  - ingress.yaml
+
+commonLabels:
+  app: gamani
+  environment: production
