Update Gamani application version and enhance ProjectManager functionality
- Bump Gamani application version to 1.0.8 in package.json and package-lock.json.
- Modify ProjectManager component to auto-create a default project only once and improve project selection logic.
- Refactor DashboardPage to implement a collapsible sidebar for project management and enhance chat history features.
- Update deployment.yaml to include necessary service account and AWS role configurations.

These changes improve the user experience and maintainability of the Gamani application, ensuring better project management and deployment practices.

--- a/apps/gamani/k8s/deployment.yaml
+++ b/apps/gamani/k8s/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: gamani
     spec:
+      serviceAccountName: gamani-service-account
       containers:
       - name: app
         image: 363397505860.dkr.ecr.il-central-1.amazonaws.com/gamani:latest
@@ -35,6 +36,10 @@ spec:
           value: "2025-07-31T16:32:01Z"
         - name: APP_DEPLOYED_BY
           value: "vadimzak"
+        - name: AWS_ROLE_ARN
+          value: "arn:aws:iam::363397505860:role/gamani-app-role"
+        - name: AWS_WEB_IDENTITY_TOKEN_FILE
+          value: "/var/run/secrets/kubernetes.io/serviceaccount/token"
         livenessProbe:
           httpGet:
             path: /health
