--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -2,9 +2,9 @@
   "name": "gamani",
   "version": "1.0.10",
   "description": "Gamani full-stack application",
-  "main": "dist/server.js",
+  "main": "dist/apps/gamani/src/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/apps/gamani/src/server.js",
     "dev": "concurrently \"ts-node src/server.ts\" \"cd client && npm run dev\"",
     "dev:server": "ts-node src/server.ts",
     "dev:client": "cd client && npm run dev",
