--- a/apps/gamani/package.json
+++ b/apps/gamani/package.json
@@ -12,7 +12,7 @@
     "build:client": "cd client && npm run build",
     "build:all": "npm run build && npm run build:client",
     "watch": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Use Playwright MCP for E2E testing\" && exit 0"
   },
   "keywords": [
     "nodejs",
